<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.NewIngredient"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/edit_ingredient_string" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/empty_ingredient_name_placeholder"/>
        
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/empty_ingredient_amount_placeholder"/>
        
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/saveIngButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/add_string"/>


</LinearLayout>