<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:scaleX="2"
            android:scaleY="2"
            android:text="@string/app_name"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/ic_baseline_cookie_24"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="26sp"
            android:text="@string/first_list_title_string"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/ingredient_cell" />

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="30sp"
            android:text="@string/second_list_title_string"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stepView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/step_cell"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_string"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>